import { pgTable, uuid, text, timestamp, integer, numeric, jsonb, pgEnum, unique, index } from 'drizzle-orm/pg-core'
import { user } from './auth-schema'

/**
 * Application tables.
 *
 * `user`, `session`, `account` and `verification` are Better Auth's and live in
 * auth-schema.ts, generated by its CLI (`npx @better-auth/cli generate`) — do not
 * hand-edit that file; change the `user.additionalFields` config in src/lib/auth.ts
 * and regenerate. Everything Better Auth does not own belongs here.
 *
 * Two conventions from structure.md apply: tables are snake_case plural, and Drizzle
 * fields are camelCase mapping onto snake_case columns.
 *
 * PostGIS columns (zones.geometry) have no native Drizzle type and are added by a raw
 * SQL migration instead, then read and written through `sql` templates (ADR-011).
 * Zones arrive with the zone endpoints.
 */

export * from './auth-schema'

export const planEnum = pgEnum('plan', ['free', 'standard', 'premium'])

export const userPlans = pgTable(
  'user_plans',
  {
    id: uuid('id').primaryKey().defaultRandom(),
    // text, not uuid: Better Auth issues its own string ids for `user.id`.
    userId: text('user_id')
      .notNull()
      .references(() => user.id, { onDelete: 'cascade' }),
    plan: planEnum('plan').notNull().default('free'),
    startedAt: timestamp('started_at', { withTimezone: true }).notNull().defaultNow(),
    /** NULL = active indefinitely. Billing is not implemented; plans are assigned manually. */
    expiresAt: timestamp('expires_at', { withTimezone: true }),
    createdAt: timestamp('created_at', { withTimezone: true }).notNull().defaultNow(),
  },
  (t) => [
    // One active plan row per user (tech.md models this 1:1).
    unique('user_plans_user_id_unique').on(t.userId),
    index('user_plans_user_id_idx').on(t.userId),
  ],
)

export type UserPlanRow = typeof userPlans.$inferSelect

/** BR-020: chosen when the zone is created, and editable afterwards per BR-029. */
export const roadClassEnum = pgEnum('road_class', ['nasional', 'nasional_provinsi', 'semua'])

/** Whether the zone's capture windows are running. */
export const zoneStatusEnum = pgEnum('zone_status', ['collecting', 'paused'])

export const zones = pgTable(
  'zones',
  {
    id: uuid('id').primaryKey().defaultRandom(),
    userId: text('user_id')
      .notNull()
      .references(() => user.id, { onDelete: 'cascade' }),
    name: text('name').notNull(),
    roadClass: roadClassEnum('road_class').notNull(),
    status: zoneStatusEnum('status').notNull().default('collecting'),

    // `geometry geometry(Polygon, 4326)` is added by migration 0002 — PostGIS has no
    // native Drizzle type, so it is written and read through `sql` templates with
    // ST_GeomFromGeoJSON / ST_AsGeoJSON (ADR-011). Declaring it here would make
    // drizzle-kit try to drop it on the next generate.

    /**
     * Segment count and total length inside the boundary for this road class.
     *
     * Nullable on purpose: they are derived from HERE, so an unconfigured HERE key
     * means "not known yet", which the UI renders as "—". Storing 0 would claim the
     * zone matched no roads, which is a different and wrong statement.
     */
    roadsCount: integer('roads_count'),
    lengthKm: numeric('length_km', { precision: 10, scale: 2 }),

    createdAt: timestamp('created_at', { withTimezone: true }).notNull().defaultNow(),
    updatedAt: timestamp('updated_at', { withTimezone: true }).notNull().defaultNow(),
  },
  (t) => [
    // BR-015 — zone names are unique per user.
    unique('zones_user_id_name_unique').on(t.userId, t.name),
    index('zones_user_id_idx').on(t.userId),
  ],
)

export type ZoneRow = typeof zones.$inferSelect

/**
 * A capture window (F-05/F-06), stored as the UI models it rather than as cron.
 *
 * ADR-019: the spec said `cron_expr`, but the Schedule board edits start/end time, an
 * interval and weekdays. Window → cron is total — every window has exactly one cron
 * form. Cron → window is not: `0 3,17 * * *` has no window representation at all. So
 * the window is stored and the cron expression is derived when the scheduler loads
 * it, keeping the lossy direction in memory and never in the database.
 */
export const captureIntervalEnum = pgEnum('capture_interval', ['15min', 'hourly', 'daily'])

export const scheduleStatusEnum = pgEnum('schedule_status', ['active', 'paused', 'deleted'])

export const schedules = pgTable(
  'schedules',
  {
    id: uuid('id').primaryKey().defaultRandom(),
    userId: text('user_id')
      .notNull()
      .references(() => user.id, { onDelete: 'cascade' }),
    zoneId: uuid('zone_id')
      .notNull()
      .references(() => zones.id, { onDelete: 'cascade' }),

    label: text('label').notNull(),
    /** "HH:mm" in Asia/Jakarta — the window the UI draws on the hour ruler. */
    startTime: text('start_time').notNull(),
    endTime: text('end_time').notNull(),
    interval: captureIntervalEnum('interval').notNull(),
    /** ISO weekday numbers the UI uses: 0 = Monday … 6 = Sunday. */
    days: integer('days').array().notNull(),

    /**
     * `deleted` is a soft delete (F-06) — capture history references the schedule that
     * produced each frame, so removing the row would orphan that history.
     */
    status: scheduleStatusEnum('status').notNull().default('active'),

    /**
     * When this window next fires — the clock, kept in the database rather than in the
     * scheduler's memory. NULL means "not computed yet": the scheduler seeds it without
     * firing, so deploying this does not make every existing window fire at once.
     */
    nextFireAt: timestamp('next_fire_at', { withTimezone: true }),

    createdAt: timestamp('created_at', { withTimezone: true }).notNull().defaultNow(),
    updatedAt: timestamp('updated_at', { withTimezone: true }).notNull().defaultNow(),
  },
  (t) => [
    index('schedules_user_id_idx').on(t.userId),
    index('schedules_zone_id_idx').on(t.zoneId),
    // BR-005 counts only `active` rows, so the status is part of the lookup.
    index('schedules_user_status_idx').on(t.userId, t.status),
  ],
)

export type ScheduleRow = typeof schedules.$inferSelect

/**
 * Captures — one row per cycle a zone collects (BR-009, BR-010).
 *
 * A "cycle" is a single firing of a capture window, or one manual trigger. The row is
 * the record that it happened, whether or not an image came out of it: a failure and a
 * plan-limit skip are both history worth keeping (BR-008), and a zone whose captures
 * stopped is only diagnosable if the failures were written down.
 *
 * `traffic` holds the GeoJSON HERE returned for that moment. Storing it — rather than
 * only a rendered PNG — is what lets the zone page redraw any past cycle on a real map
 * instead of showing a flat picture, and it is the same shape the live preview already
 * renders, so one component draws both.
 *
 * `filePath` stays null until the Playwright renderer lands. Null means "no image yet",
 * never "no data": the cycle is still complete and still displayable from `traffic`.
 */
export const captureStatusEnum = pgEnum('capture_status', [
  'pending',
  'processing',
  'done',
  'failed',
  'skipped_limit',
  /** The system was down when this was due. Not attempted, so not a failure. */
  'missed',
])

export const captureTriggerEnum = pgEnum('capture_trigger', ['manual', 'scheduled'])

export const captures = pgTable(
  'captures',
  {
    id: uuid('id').primaryKey().defaultRandom(),
    userId: text('user_id')
      .notNull()
      .references(() => user.id, { onDelete: 'cascade' }),
    zoneId: uuid('zone_id')
      .notNull()
      .references(() => zones.id, { onDelete: 'cascade' }),
    /**
     * Null for a manual capture, and null again once the window that produced it is
     * deleted — ON DELETE SET NULL rather than CASCADE, because the frame still
     * happened and deleting a schedule must not erase the history it produced.
     */
    scheduleId: uuid('schedule_id').references(() => schedules.id, { onDelete: 'set null' }),

    status: captureStatusEnum('status').notNull().default('pending'),
    trigger: captureTriggerEnum('trigger').notNull(),

    /**
     * The road class actually collected, after BR-022's cap. Stored per capture because
     * it can differ from the zone's own class the moment a plan changes, and a frame
     * has to stay explainable years later without replaying the plan history.
     */
    roadClass: roadClassEnum('road_class').notNull(),

    /** HERE's FeatureCollection for this moment. Null while pending or on failure. */
    traffic: jsonb('traffic'),
    roadsCount: integer('roads_count'),
    /** Mean jam factor across the collected roads — the number a trend line plots. */
    jamFactorAvg: numeric('jam_factor_avg', { precision: 4, scale: 2 }),

    /** R2 object path (BR-011). Null until an image is rendered. */
    filePath: text('file_path'),
    fileSize: integer('file_size'),
    /** BR-023 — the style used, kept for history, never replayed automatically. */
    styleUsed: jsonb('style_used'),

    /** Why a `failed` row failed. Operators cannot diagnose what was not written down. */
    error: text('error'),

    /**
     * The instant this cycle was due. Null for manual captures, which are due when
     * asked. Lateness is `capturedAt - scheduledFor`, which is only a fact because both
     * are stored — `capturedAt` alone cannot tell an on-time frame from one taken forty
     * minutes late after an outage.
     */
    scheduledFor: timestamp('scheduled_for', { withTimezone: true }),

    /** When the traffic was sampled, not when the row was written. */
    capturedAt: timestamp('captured_at', { withTimezone: true }).notNull().defaultNow(),
    createdAt: timestamp('created_at', { withTimezone: true }).notNull().defaultNow(),
  },
  (t) => [
    // The zone page reads its own history newest-first; this is that query.
    index('captures_zone_captured_idx').on(t.zoneId, t.capturedAt),
    // BR-006 counts a user's captures for the current WIB day.
    index('captures_user_captured_idx').on(t.userId, t.capturedAt),
    index('captures_schedule_idx').on(t.scheduleId),
  ],
)

export type CaptureRow = typeof captures.$inferSelect
