// =============================================================================
// Maceut — database schema (DBML)
//
// Paste into https://dbdiagram.io to view the ERD.
//
// ⚠️ This file is documentation, not a source of truth. The schema is defined in
//    api/drizzle/schema.ts and api/drizzle/auth-schema.ts, and applied by the
//    migrations in api/drizzle/migrations/. Update this file in the SAME commit
//    that changes those — a stale ERD is worse than none, because it is believed.
//
// Convention: every timestamp is `timestamptz`. A bare `timestamp` carries no
// offset and means whatever the reading process assumes.
//
// Last updated: 2026-09-21 (migration 0006_drop_organisation)
// =============================================================================

Project maceut {
  database_type: 'PostgreSQL'
  Note: 'Traffic monitoring and scheduled capture platform. PostGIS required.'
}

// -----------------------------------------------------------------------------
// Better Auth — generated by `npx @better-auth/cli generate` (ADR-009)
// Do not hand-edit api/drizzle/auth-schema.ts except to re-apply withTimezone.
// -----------------------------------------------------------------------------

Table user {
  id text [pk]
  name text [not null, note: 'Full name. Surfaced to the app as fullName.']
  email text [not null, note: 'UNIQUE on lower(email) — see migration 0001']
  email_verified boolean [not null, default: false]
  image text [null]
  role text [null, default: 'user', note: 'Platform role: user | internal (BR-027). Cache — INTERNAL_EMAILS is the authority and acts as a floor, never a ceiling.']
  onboarding_done boolean [null, default: false, note: 'Server-set only (input: false)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (email) [unique, name: 'user_email_lower_unique', note: 'Functional index on lower(email)']
  }
}

Table session {
  id text [pk]
  expires_at timestamptz [not null, note: 'Server-side expiry — sign-out genuinely revokes']
  token text [not null, unique]
  ip_address text [null]
  user_agent text [null]
  user_id text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null]

  Indexes {
    user_id [name: 'session_userId_idx']
  }
}

Table account {
  id text [pk]
  account_id text [not null]
  provider_id text [not null]
  user_id text [not null]
  access_token text [null]
  refresh_token text [null]
  id_token text [null]
  access_token_expires_at timestamptz [null]
  refresh_token_expires_at timestamptz [null]
  scope text [null]
  password text [null, note: 'scrypt hash for email/password accounts']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null]

  Indexes {
    user_id [name: 'account_userId_idx']
  }
}

Table verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    identifier [name: 'verification_identifier_idx']
  }
}

// -----------------------------------------------------------------------------
// Application tables — api/drizzle/schema.ts
// -----------------------------------------------------------------------------

Table user_plans {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null, unique, note: '1:1 with user']
  plan plan [not null, default: 'free', note: 'BR-001: every account starts free']
  started_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [null, note: 'NULL = active indefinitely; billing not implemented']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id [name: 'user_plans_user_id_idx']
  }
}

Table zones {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null]
  name text [not null]
  road_class road_class [not null, note: 'BR-020 chosen at creation, BR-029 editable after']
  status zone_status [not null, default: 'collecting']
  geometry "geometry(Polygon,4326)" [not null, note: 'PostGIS, WGS84 (BR-013). Added by migration 0003 — no Drizzle type exists. Read/written via ST_AsGeoJSON / ST_GeomFromGeoJSON (ADR-011). areaKm2 is COMPUTED on read, never stored.']
  roads_count integer [null, note: 'From HERE. NULL = not known yet, NOT zero.']
  length_km "numeric(10,2)" [null, note: 'From HERE. NULL = not known yet.']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, name) [unique, name: 'zones_user_id_name_unique', note: 'BR-015']
    user_id [name: 'zones_user_id_idx']
    geometry [type: gist, name: 'zones_geometry_idx']
  }
}

// -----------------------------------------------------------------------------
// Enums
// -----------------------------------------------------------------------------

Enum plan {
  free
  standard
  premium
}

Enum capture_interval {
  "15min" [note: 'Premium only']
  hourly  [note: 'Standard and up']
  daily   [note: 'All plans']
}

Enum schedule_status {
  active
  paused  [note: 'Frees its BR-005 slot. Also what a downgrade does (ADR-020)']
  deleted [note: 'Soft delete — capture history references the schedule']
}

Enum platform_role {
  user
  internal
}

Enum road_class {
  nasional          [note: 'HERE FC1-2']
  nasional_provinsi [note: 'HERE FC1-3']
  semua             [note: 'HERE FC1-5']
}

Enum zone_status {
  collecting
  paused
}

// -----------------------------------------------------------------------------
// Relationships
// -----------------------------------------------------------------------------

Ref: session.user_id > user.id [delete: cascade]
Ref: account.user_id > user.id [delete: cascade]
Ref: user_plans.user_id - user.id [delete: cascade]
Ref: zones.user_id > user.id [delete: cascade]

Table schedules {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null]
  zone_id uuid [not null]
  label text [not null]
  start_time text [not null, note: '"HH:mm" in Asia/Jakarta']
  end_time text [not null]
  interval capture_interval [not null]
  days "integer[]" [not null, note: '0 = Monday … 6 = Sunday']
  status schedule_status [not null, default: 'active']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Stored as a WINDOW, not cron (ADR-019). Window -> cron is total; cron -> window is not, so the lossy direction happens in memory. See api/src/types/schedule.ts'

  Indexes {
    user_id [name: 'schedules_user_id_idx']
    zone_id [name: 'schedules_zone_id_idx']
    (user_id, status) [name: 'schedules_user_status_idx', note: 'BR-005 counts active only']
  }
}

Ref: schedules.user_id > user.id [delete: cascade]
Ref: schedules.zone_id > zones.id [delete: cascade]

// -----------------------------------------------------------------------------
// Not built yet — listed so the gap is visible rather than forgotten
// -----------------------------------------------------------------------------
// captures          — CAP-01 (next ticket). Note: captures.schedule_id ships as a
//                     nullable uuid with NO foreign key, because schedules does not
//                     exist yet. The FK is added with that table.
// branding_configs  — Sprint 2 (F-11, F-12). BR-018's logo compositing needs it.
